Home and about section complete

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <script src="https://kit.fontawesome.com/445f742346.js" crossorigin="anonymous"></script>
 
     <!-- Google Fonts -->
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700;900&family=Rubik:wght@500;700;900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&family=Rubik:wght@500;700;900&display=swap" rel="stylesheet">
 
     <!-- Main css -->
     <link rel="stylesheet" href="css/style.css">
@@ -66,6 +66,185 @@
                 </div>
             </section>
             <!-- Home Section End -->
+
+            <!-- About Section -->
+            <section class="about">
+                <div class="container">
+                    <div class="row">
+                        <div class="section-title padd-15">
+                            <h2>About Me</h2>
+                        </div>
+                    </div>
+
+                    <div class="row">
+                        <div class="about-content padd-15">
+                            <div class="row">
+                                <div class="about-text padd-15">
+                                    <h3>I'm Mehedi Hasan and <span>Graphic Artist</span></h3>
+                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum ut, expedita quidem, quaerat neque praesentium tempora modi quis nam dolorum et facilis placeat vitae nihil corrupti alias ipsa nostrum reprehenderit! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quas excepturi ratione totam modi dicta id expedita veritatis dignissimos tempore.</p>
+                                </div>
+                            </div>
+
+                            <div class="row">
+                                <div class="personal-info padd-15">
+                                    <div class="row">
+                                        <div class="info-item padd-15">
+                                            <p>Birthday: <span>14 April 2020</span></p>
+                                        </div>
+                                        <div class="info-item padd-15">
+                                            <p>Age: <span>20</span></p>
+                                        </div>
+                                        <div class="info-item padd-15">
+                                            <p>Website: <span>www.google.com</span></p>
+                                        </div>
+                                        <div class="info-item padd-15">
+                                            <p>Email: <span>afmssrahi@gmail.com</span></p>
+                                        </div>
+                                        <div class="info-item padd-15">
+                                            <p>Degree: <span>Honours</span></p>
+                                        </div>
+                                        <div class="info-item padd-15">
+                                            <p>Phone: <span>01234-56789</span></p>
+                                        </div>
+                                        <div class="info-item padd-15">
+                                            <p>City: <span>Dhaka, Bangladesh</span></p>
+                                        </div>
+                                        <div class="info-item padd-15">
+                                            <p>Freelance: <span>Available</span></p>
+                                        </div>
+                                    </div>
+
+                                    <div class="row">
+                                        <div class="buttons padd-15">
+                                            <a href="#" class="btn">Download CV</a>
+                                            <a href="#" class="btn">Hire Me</a>
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <div class="skills padd-15">
+                                    <div class="row">
+                                        <div class="skill-item padd-15">
+                                            <h5>Photoshop</h5>
+                                            <div class="progress">
+                                                <div class="progress-in progress-in-for-photoshop"></div>
+                                                <div class="skill-percent">85%</div>
+                                            </div>
+                                        </div>
+                                        <div class="skill-item padd-15">
+                                            <h5>Illustrator</h5>
+                                            <div class="progress">
+                                                <div class="progress-in progress-in-for-illustrator"></div>
+                                                <div class="skill-percent">70%</div>
+                                            </div>
+                                        </div>
+                                        <div class="skill-item padd-15">
+                                            <h5>Sketch</h5>
+                                            <div class="progress">
+                                                <div class="progress-in progress-in-for-sketch"></div>
+                                                <div class="skill-percent">95%</div>
+                                            </div>
+                                        </div>
+                                        <div class="skill-item padd-15">
+                                            <h5>Graphic Design</h5>
+                                            <div class="progress">
+                                                <div class="progress-in progress-in-for-graphic-design"></div>
+                                                <div class="skill-percent">65%</div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="row">
+                                <div class="education padd-15">
+                                    <h3 class="title">Education</h3>
+                                    <div class="row">
+                                        <div class="timeline-box padd-15">
+                                            <div class="timeline shadow-dark">
+                                                <!-- Timeline Item -->
+                                                <div class="timeline-item">
+                                                    <div class="circle-dot"></div>
+                                                    <h6 class="timeline-date">
+                                                        <i class="far fa-calendar-alt"></i> 2016 - 2018
+                                                    </h6>
+                                                    <h4 class="timeline-title">Higher Secondary Education</h4>
+                                                    <p class="timeline-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tempore, maiores officia neque obcaecati placeat suscipit dolores qui delectus.</p>
+                                                </div>
+                                                <!-- Timeline Item -->
+
+                                                <!-- Timeline Item -->
+                                                <div class="timeline-item">
+                                                    <div class="circle-dot"></div>
+                                                    <h6 class="timeline-date">
+                                                        <i class="far fa-calendar-alt"></i> 2014 - 2016
+                                                    </h6>
+                                                    <h4 class="timeline-title">Secondery School Certificate</h4>
+                                                    <p class="timeline-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tempore, maiores officia neque obcaecati placeat suscipit dolores qui delectus.</p>
+                                                </div>
+                                                <!-- Timeline Item -->
+
+                                                <!-- Timeline Item -->
+                                                <div class="timeline-item">
+                                                    <div class="circle-dot"></div>
+                                                    <h6 class="timeline-date">
+                                                        <i class="far fa-calendar-alt"></i> 2012 - 2014
+                                                    </h6>
+                                                    <h4 class="timeline-title">Junior School Certificate</h4>
+                                                    <p class="timeline-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tempore, maiores officia neque obcaecati placeat suscipit dolores qui delectus.</p>
+                                                </div>
+                                                <!-- Timeline Item -->
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="experience padd-15">
+                                    <h3 class="title">Experience</h3>
+                                    <div class="row">
+                                        <div class="timeline-box padd-15">
+                                            <div class="timeline shadow-dark">
+                                                <!-- Timeline Item -->
+                                                <div class="timeline-item">
+                                                    <div class="circle-dot"></div>
+                                                    <h6 class="timeline-date">
+                                                        <i class="far fa-calendar-alt"></i> 2016 - 2018
+                                                    </h6>
+                                                    <h4 class="timeline-title">2D Motion Graphics</h4>
+                                                    <p class="timeline-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tempore, maiores officia neque obcaecati placeat suscipit dolores qui delectus.</p>
+                                                </div>
+                                                <!-- Timeline Item -->
+
+                                                <!-- Timeline Item -->
+                                                <div class="timeline-item">
+                                                    <div class="circle-dot"></div>
+                                                    <h6 class="timeline-date">
+                                                        <i class="far fa-calendar-alt"></i> 2014 - 2016
+                                                    </h6>
+                                                    <h4 class="timeline-title">Graphic Desing</h4>
+                                                    <p class="timeline-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tempore, maiores officia neque obcaecati placeat suscipit dolores qui delectus.</p>
+                                                </div>
+                                                <!-- Timeline Item -->
+
+                                                <!-- Timeline Item -->
+                                                <div class="timeline-item">
+                                                    <div class="circle-dot"></div>
+                                                    <h6 class="timeline-date">
+                                                        <i class="far fa-calendar-alt"></i> 2012 - 2014
+                                                    </h6>
+                                                    <h4 class="timeline-title">Job at Unknown Company</h4>
+                                                    <p class="timeline-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tempore, maiores officia neque obcaecati placeat suscipit dolores qui delectus.</p>
+                                                </div>
+                                                <!-- Timeline Item -->
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section >
+            <!-- About Section -->
         </div>
         <!-- Main Content End -->
     </div>
