--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <!-- Main Content -->
         <div class="main-content">
             <!-- Home Section -->
-            <section class="home hidden">
+            <section class="home">
                 <div class="container">
                     <div class="intro">
                         <img src="img/profile-picture.jpg" alt="profile picture" class="shadow-dark">
@@ -70,7 +70,7 @@
             <!-- Home Section End -->
 
             <!-- About Section -->
-            <section class="about hidden">
+            <section class="about">
                 <div class="container">
                     <div class="row">
                         <div class="section-title padd-15">
@@ -265,7 +265,7 @@
             <!-- About Section -->
 
             <!-- Services Section -->
-            <section class="service hidden">
+            <section class="service">
                 <div class="container">
                     <div class="row">
                         <div class="section-title padd-15">
@@ -360,7 +360,7 @@
                             <button type="button" data-filter="graphic-design">Graphic Design</button>
                         </div>
                     </div>
-                    <div class="row">
+                    <div class="row portfolio-items">
                         <!-- Portfolio Item -->
                         <div class="portfolio-item padd-15" data-category="logo">
                             <div class="portfolio-item-inner shadow-dark">
@@ -369,6 +369,7 @@
                                 </div>
                                 <div class="portfolio-info">
                                     <h4>Logo</h4>
+                                    <p>Click Me</p>
                                     <div class="icon">
                                         <i class="fas fa-search"></i>
                                     </div>
@@ -384,8 +385,8 @@
                                     <img src="img/portfolio/2.jpg" alt="portfolio">
                                 </div>
                                 <div class="portfolio-info">
-                                    <h4>Graphic Design
-                                    </h4>
+                                    <h4>Graphic Design</h4>
+                                    <p>Click Me</p>
                                     <div class="icon">
                                         <i class="fas fa-search"></i>
                                     </div>
@@ -402,6 +403,7 @@
                                 </div>
                                 <div class="portfolio-info">
                                     <h4>Logo</h4>
+                                    <p>Click Me</p>
                                     <div class="icon">
                                         <i class="fas fa-search"></i>
                                     </div>
@@ -411,13 +413,14 @@
                         <!-- Portfolio Item End -->
 
                         <!-- Portfolio Item -->
-                        <div class="portfolio-item padd-15" data-category="logo">
+                        <div class="portfolio-item padd-15" data-category="retuching">
                             <div class="portfolio-item-inner shadow-dark">
                                 <div class="portfolio-img">
                                     <img src="img/portfolio/4.jpg" alt="retuching">
                                 </div>
                                 <div class="portfolio-info">
                                     <h4>Retuching</h4>
+                                    <p>Click Me</p>
                                     <div class="icon">
                                         <i class="fas fa-search"></i>
                                     </div>
@@ -427,15 +430,14 @@
                         <!-- Portfolio Item End -->
 
                         <!-- Portfolio Item -->
-                        <div class="portfolio-item padd-15" data-category="graphic-design
-                        ">
+                        <div class="portfolio-item padd-15" data-category="graphic-design">
                             <div class="portfolio-item-inner shadow-dark">
                                 <div class="portfolio-img">
                                     <img src="img/portfolio/5.jpg" alt="portfolio">
                                 </div>
                                 <div class="portfolio-info">
-                                    <h4>Graphic Design
-                                    </h4>
+                                    <h4>Graphic Design</h4>
+                                    <p>Click Me</p>
                                     <div class="icon">
                                         <i class="fas fa-search"></i>
                                     </div>
@@ -452,6 +454,7 @@
                                 </div>
                                 <div class="portfolio-info">
                                     <h4>Logo</h4>
+                                    <p>Click Me</p>
                                     <div class="icon">
                                         <i class="fas fa-search"></i>
                                     </div>
@@ -472,18 +475,18 @@
     <div class="lightbox">
         <div class="lightbox-content">
             <div class="lightbox-close">&times;</div>
-            <img src="img/portfolio/1.jpg" alt="" class="lightbox-img">
+            <img src="img/portfolio/1.jpg" alt="" class="lightbox-img" onclick="nextItem()">
             <div class="lightbox-caption">
-                <div class="caption-text">Logo</div>
-                <div class="caption-counter">1 of 6</div>
+                <div class="caption-text"></div>
+                <div class="caption-counter"></div>
             </div>
         </div>
         <div class="lightbox-controls">
-            <div class="prev-item">
+            <div class="prev-item" onclick="prevItem()">
                 <i class="fas fa-angle-left"></i>
             </div>
-            <div class="next-item">
-                <i class="fas fa-angle-right    "></i>
+            <div class="next-item" onclick="nextItem()">
+                <i class="fas fa-angle-right"></i>
             </div>
         </div>
     </div>
