Contact page complete

--- a/index.html
+++ b/index.html
@@ -466,6 +466,84 @@
                 </div>
             </section>
             <!-- Portfolio Section End -->
+
+            <!-- Contact Section -->
+            <section class="contact">
+                <div class="container">
+                    <div class="row">
+                        <div class="section-title padd-15">
+                            <h2>Contact Me</h2>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <!-- contact-info-item -->
+                        <div class="contact-info-item padd-15">
+                            <div class="icon"><i class="fab fa-facebook-messenger"></i></div>
+                            <h4>Say, Hi!</h4>
+                            <p><a href="https://www.facebook.com/Mehedihasan.039/">m.me/muhammadmehedi</a></p>
+                        </div>
+                        <!-- contact-info-item End-->
+
+                        <!-- contact-info-item -->
+                        <div class="contact-info-item padd-15">
+                            <div class="icon"><i class="fas fa-map-marker-alt"></i></div>
+                            <h4>Office</h4>
+                            <p>XYZ-420, Dhaka, Bangladesh</p>
+                        </div>
+                        <!-- contact-info-item End-->
+
+                        <!-- contact-info-item -->
+                        <div class="contact-info-item padd-15">
+                            <div class="icon"><i class="fas fa-envelope"></i></div>
+                            <h4>Email</h4>
+                            <p>xyz420.official@gmail.com</p>
+                        </div>
+                        <!-- contact-info-item End-->
+                    </div>
+
+                    <!-- Contact Form -->
+                    <div class="row">
+                        <form action="" class="contact-form padd-15">
+                            <div class="row">
+                                <div class="form-item col-6 padd-15">
+                                    <div class="form-group">
+                                        <input type="text" name="Name" class="form-control" placeholder="Name*" />
+                                    </div>
+                                </div>
+                                <div class="form-item col-6 padd-15">
+                                    <div class="form-group">
+                                        <input type="email" name="Email" class="form-control" placeholder="Email*" />
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="form-item col-12 padd-15">
+                                    <div class="form-group">
+                                        <input type="text" name="Subject" class="form-control" placeholder="Subject*" />
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="form-item col-12 padd-15">
+                                    <div class="form-group">
+                                        <textarea class="form-control" name="Message"
+                                            placeholder="Your Message..."></textarea>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-12 padd-15">
+                                    <button type="submit" class="btn">Send Message</button>
+                                </div>
+                            </div>
+                        </form>
+                    </div>
+                    <!-- Contact Form End -->
+
+                </div>
+            </section>
+            <!-- Contact Section End -->
+
         </div>
         <!-- Main Content End -->
     </div>
