--- a/index.html
+++ b/index.html
@@ -290,8 +290,7 @@
                                 <div class="icon"><i class="fas fa-image    "></i></div>
                                 <h4>Graphic Design</h4>
                                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores quasi nostrum, quas
-                                    molestias ipsum Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore
-                                    corrupti possimus pariatur, nihil sit velit?</p>
+                                    molestias ipsum</p>
                             </div>
                         </div>
                         <!-- Service Item 2 End -->
