font size reduce for email address in small device

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                                             <p>Website: <span>www.google.com</span></p>
                                         </div>
                                         <div class="info-item padd-15">
-                                            <p>Email: <span>afmssrahi@gmail.com</span></p>
+                                            <p>Email: <span class="email">afmssrahi@gmail.com</span></p>
                                         </div>
                                         <div class="info-item padd-15">
                                             <p>Degree: <span>Honours</span></p>
