--- a/index.html
+++ b/index.html
@@ -35,11 +35,11 @@
             </div>
             <!-- Nav -->
             <ul class="nav">
-                <li><a href="#" class="active"><i class="fas fa-home"></i>Home</a></li>
-                <li><a href="#"><i class="fas fa-user"></i>About</a></li>
-                <li><a href="#"><i class="fas fa-list"></i>Services</a></li>
-                <li><a href="#"><i class="fas fa-briefcase"></i>Portfolio</a></li>
-                <li><a href="#"><i class="fas fa-comments"></i>Contact</a></li>
+                <li><a href="#home" class="active"><i class="fas fa-home"></i>Home</a></li>
+                <li><a href="#about"><i class="fas fa-user"></i>About</a></li>
+                <li><a href="#services"><i class="fas fa-list"></i>Services</a></li>
+                <li><a href="#portfolio"><i class="fas fa-briefcase"></i>Portfolio</a></li>
+                <li><a href="#contact"><i class="fas fa-comments"></i>Contact</a></li>
             </ul>
             <!-- Copyright -->
             <div class="copyright-text">
@@ -50,8 +50,9 @@
 
         <!-- Main Content -->
         <div class="main-content">
+
             <!-- Home Section -->
-            <section class="home">
+            <section class="home" id="home">
                 <div class="container">
                     <div class="intro">
                         <img src="img/profile-picture.jpg" alt="profile picture" class="shadow-dark">
@@ -70,7 +71,7 @@
             <!-- Home Section End -->
 
             <!-- About Section -->
-            <section class="about">
+            <section class="about" id="about">
                 <div class="container">
                     <div class="row">
                         <div class="section-title padd-15">
@@ -265,7 +266,7 @@
             <!-- About Section -->
 
             <!-- Services Section -->
-            <section class="service">
+            <section class="service" id="services">
                 <div class="container">
                     <div class="row">
                         <div class="section-title padd-15">
@@ -344,7 +345,7 @@
             <!-- Services Section End -->
 
             <!-- Portfolio Section -->
-            <section class="portfolio">
+            <section class="portfolio" id="portfolio">
                 <div class="container">
                     <div class="row">
                         <div class="section-title padd-15">
@@ -467,7 +468,7 @@
             <!-- Portfolio Section End -->
 
             <!-- Contact Section -->
-            <section class="contact">
+            <section class="contact" id="contact">
                 <div class="container">
                     <div class="row">
                         <div class="section-title padd-15">
